# python-training

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.txt  pyproject.toml  requirements.txt  test.py
async development/: multithreading.py  multithreading2.py
concurrency/: 01-Concurrency - basic.py  01-Multithreading.py  02-Concurrency - advanced.py  02-Multiprocessing.py  03-Advanced multithreading.py  03-Async-Await.py  example1_multiprocessing.py  example2.py
core/: 01-Data Types.py  01_data_types.py  02-Flow control.py  02_flow_control.py  03-Functions.py  03_functions.py  04-Files.py  04_files.py  05-Collections.py  05_collections.py  06-Iterators and Generators.py  06_iterators_and_generators.py  07-Decorators.py  07_decorators.py  08-Args and kwargs.py  08_args_and_kwargs.py  09-Debugging.py  09_debugging.py  10-Working with files.py  10_regular_expressions.py  11-Regular expressions.py  11_object_oriented_programming.py  12-Object Oriented Programming.py  12_special_methods.py  13-Special Methods and Variables.py  13_web_scrapping.py  14-Web Scraping.py  14-mailing.py  15-Email and text messages.py  16-Dates and time.py  16_datetime.py  17-Dates and time.py  18-Packages.py  18_packages.py  19-Typing.py  20_poetry.py  20_unittest.py
core/concurrency/: 01-Concurrency - basic.py  02-Concurrency - advanced.py  concurrency_advanced.py  concurrency_basic.py  example4_asyncio.py  (+3 more)
data-science/: 01-Numpy.py  02-Pandas.py  03-Matplotlib.py  04-Seaborn.py
django/: commands.txt  django_notes.txt
libraries/: 01-Request.py  02-UnitTest.py  03-Pickle and Shelve.py  04-Numpy.py  04-PyInputPlus.py  05-Pandas.py  06-Pandas.py
libs/: 01_requests.py  02_numpy.py  03_pandas.py  04_unit_tests.py  05_pickle_and_shelve.py
others/: 01-Poetry.py  02-Open AI.py
(+90 files in other folders)
