[tool.poetry]
package-mode = false
name = "documentation-python"
description = "Documentation and exercises of the Python programming language and some its libraries and frameworks."
authors = ["dyegop <poncelas.professional@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
requests = "*"
pandas = "*"
pillow = "*"
openpyxl = "*"
bs4 = "*"
flask = "*"
flask-restful = "*"
flask-jwt = "*"
openai = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
pre-commit = "*"
pylint = "*"
