[tool.poetry]
package-mode = false
name = "python-training"
description = "Python learning of core libraries and some frameworks or external dependencies."
authors = ["dyegop <poncelas.professional@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
requests = "*"
pandas = "*"
pillow = "*"
openpyxl = "*"
bs4 = "*"
flask = "*"
flask-restful = "*"
flask-jwt = "*"
openai = "*"
python-dotenv = "*"
pygame = "^2.6.1"
django = "^5.2.2"
pyperclip = "^1.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
pre-commit = "*"
pylint = "*"
